# spectre-js

./: CMakeLists.txt  LICENSE
docs/: architecture.md  coding_conventions.md  es2025_overview.md
es2025/: environment.cpp
es2025/modules/: array_buffer_module.cpp  array_module.cpp  async_function_module.cpp  async_iterator_module.cpp  atomics_module.cpp  bigint_module.cpp  boolean_module.cpp  data_view_module.cpp  date_module.cpp  error_module.cpp  finalization_registry_module.cpp  function_module.cpp  generator_module.cpp  global_module.cpp  intl_module.cpp  iterator_module.cpp  json_module.cpp  map_module.cpp  math_module.cpp  module_loader_module.cpp  number_module.cpp  object_module.cpp  promise_module.cpp  proxy_module.cpp  reflect_module.cpp  regexp_module.cpp  set_module.cpp  shadow_realm_module.cpp  shared_array_buffer_module.cpp  string_module.cpp  structured_clone_module.cpp  symbol_module.cpp  temporal_module.cpp  typed_array_module.cpp  weak_map_module.cpp  weak_ref_module.cpp  weak_set_module.cpp
examples/: basic_demo.cpp  es2025_production_demo.cpp  es_showcase.cpp  multi_thread_demo.cpp
examples/scripts/: global_bootstrap.js
include/spectre/: config.h  context.h  runtime.h  status.h  subsystems.h
include/spectre/es2025/: environment.h  module.h  value.h
include/spectre/es2025/modules/: all_modules.h  array_buffer_module.h  array_module.h  async_function_module.h  async_iterator_module.h  atomics_module.h  bigint_module.h  boolean_module.h  data_view_module.h  date_module.h  error_module.h  finalization_registry_module.h  function_module.h  generator_module.h  global_module.h  intl_module.h  iterator_module.h  json_module.h  map_module.h  math_module.h  module_loader_module.h  number_module.h  object_module.h  promise_module.h  proxy_module.h  reflect_module.h  regexp_module.h  set_module.h  shadow_realm_module.h  shared_array_buffer_module.h  string_module.h  structured_clone_module.h  symbol_module.h  temporal_module.h  typed_array_module.h  weak_map_module.h  weak_ref_module.h  weak_set_module.h
src/: config.cpp  context.cpp  mode_adapter.h  mode_factory.cpp  mode_helpers.cpp  mode_helpers.h  mode_multi_thread.cpp  mode_single_thread.cpp  runtime.cpp  subsystems.cpp
tests/: runtime_tests.cpp
